Fixed emergency bug on mobile

--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -30,7 +30,7 @@
 
 @media (max-width: 600px) 
 {
-  #navbar {
+  #main {
     height: 160px;
     min-width: 100%;
   }
