--- a/styles/NavbarRoute.module.scss
+++ b/styles/NavbarRoute.module.scss
@@ -20,7 +20,7 @@
 }
 
 @media (max-width: 600px) {
-  .route {
+  #main {
     padding: 1px;
   }
 }
